--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blank</title>
+    <title>Sean's Favorite Albums</title>
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -25,6 +25,7 @@
           <h4><a href="/api">Read My API Documentation</a></h4>
         </div>
       </div>
+        <div class='row' id="personalInfo"></div>
     </div>
   </body>
 </html>
