--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,14 @@
 body {
   color: #333;
   font-family: Helvetica, Arial, sans-serif;
-  background-color: skyblue; /* Sanity Check! */
+  background-color: white; /* Sanity Check! */
 }
 
 h1 {
   margin-top: 100px;
   text-align: center;
+}
+
+#profile {
+  width: 100px;
 }
