--- a/views/index.html
+++ b/views/index.html
@@ -21,11 +21,44 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>In Progress</h1>
+          <h1>Express Personal API</h1>
           <h4><a href="/api">Read My API Documentation</a></h4>
         </div>
       </div>
-        <div class='row' id="personalInfo"></div>
+      <div class='row' col-md-offset-2 id="personalInfo"></div>
+      <div class='col-md-8 col-md-offset-2'>
+        <form class-'form-inline' id='newAlbumForm'>
+          <div class='form-group'>
+            <label for='tite'>Album Title</label>
+            <input type='text' class='form-control' name='title' placeholder='Album title'>
+          </div>
+          <div class='form-group'>
+            <label for='tite'>Artist</label>
+            <input type='text' class='form-control' name='title' placeholder='Artist name'>
+          </div>
+          <button type='sumbit' class='btn btn-default'>Add album</button>
+        </form>
+        <div id="albumTarget">
+          <!-- handlebars template -->
+        <script id='albums-template' type='text/x-handlebars-template'>
+          {{#each albums}}
+        <hr>
+        <p>
+          <strong>{{title}}</strong>
+          by {{artist.name}}
+          <br>
+          <b>Songs</b>
+          {{#each songs}}
+            {{name}}
+          {{/each}}
+        <button type='button' name='button' class='deleteBtn btn btn-danger pull-right' data-id={{_id}}>Delete</button>
+      </p>
+      <form class='form-inline' id='addSongForm' data-id={{_id}}>
+        <div class='form-group'>
+          <input type='text' class='form-control' name='name' placeholder='Song'>
+        </div>
+        <button type='submit' class='btn btn-default'>Add song</button>
+      </form>
     </div>
   </body>
 </html>
