--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
           <h4><a href="/api">Read My API Documentation</a></h4>
         </div>
       </div>
-      <div class='row' col-md-offset-2 id="personalInfo"></div>
+      <div class='row' col-md-offset-2 id='profileTarget'></div>
       <div class='col-md-8 col-md-offset-2'>
         <form class-'form-inline' id='newAlbumForm'>
           <div class='form-group'>
@@ -34,18 +34,18 @@
           </div>
           <div class='form-group'>
             <label for='tite'>Artist</label>
-            <input type='text' class='form-control' name='title' placeholder='Artist name'>
+            <input type='text' class='form-control' name='artist' placeholder='Artist name'>
           </div>
           <button type='sumbit' class='btn btn-default'>Add album</button>
         </form>
-        <div id="albumTarget">
+        <div id='albumsTarget'>
           <!-- handlebars template -->
         <script id='albums-template' type='text/x-handlebars-template'>
           {{#each albums}}
         <hr>
         <p>
           <strong>{{title}}</strong>
-          by {{artist.name}}
+          by {{artist}}
           <br>
           <b>Songs</b>
           {{#each songs}}
@@ -59,6 +59,7 @@
         </div>
         <button type='submit' class='btn btn-default'>Add song</button>
       </form>
+      {{/each}}
     </div>
   </body>
 </html>
