got POST to display artist but not album title

--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
         <hr>
         <p>
           <strong>{{title}}</strong>
-          by {{artist}}
+          by {{artist.name}}
           <br>
           <b>Songs</b>
           {{#each songs}}
