more progress on seed.js file

--- a/views/index.html
+++ b/views/index.html
@@ -29,11 +29,11 @@
       <div class='col-md-8 col-md-offset-2'>
         <form class-'form-inline' id='newAlbumForm'>
           <div class='form-group'>
-            <label for='tite'>Album Title</label>
+            <label for='title'>Album Title</label>
             <input type='text' class='form-control' name='title' placeholder='Album title'>
           </div>
           <div class='form-group'>
-            <label for='tite'>Artist</label>
+            <label for='artist'>Artist</label>
             <input type='text' class='form-control' name='artist' placeholder='Artist name'>
           </div>
           <button type='sumbit' class='btn btn-default'>Add album</button>
